# quantum-coupling-ML

./: .gitignore  README.md
api/: main.py  model.onnx  model.onnx.data  predict.py  pyproject.toml  requirements.txt  sample.py
data/: dataset.h5  model.onnx.data
frontend/: index.html
model/: export.py  generate.py  pyproject.toml  train.py  visualise.py
