[project]
name = "coupling-model"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "qarray-latched",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "h5py>=3.9.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "onnxscript>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.7.0",
]

[tool.uv.sources]
qarray-latched = { path = "../QArray-plus", editable = true }
